styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap');

html, body{
    margin: 0;
    padding: 0;
}

body{
    background: #f9f9f9;
    overflow: hidden;
    display: flex;
    width: 100vw;
    height: 100vh;
    font-family: 'Poppins', sans-serif;
}

.container{
    background: #393A10;
    width: 100vw;
    margin: 15px;
    color: #FF6542;
    display: flex;
}

.title{
    margin: auto;
    text-align: center;
}

#gif{
    background: url('https://i.gifer.com/It8Z.gif') center center no-repeat;
    width: 300px;
    height: 300px;
    object-fit: fill;
}

